--- a/packages/pluggableWidgets/datagrid-number-filter-web/package.json
+++ b/packages/pluggableWidgets/datagrid-number-filter-web/package.json
@@ -24,7 +24,7 @@
   },
   "testProject": {
     "githubUrl": "https://github.com/mendix/testProjects",
-    "branchName": "datagrid-number-filter-web"
+    "branchName": "datagrid-number-filter-web-2.3.1"
   },
   "packagePath": "com.mendix.widget.web",
   "scripts": {
