--- a/packages/pluggableWidgets/datagrid-web/package.json
+++ b/packages/pluggableWidgets/datagrid-web/package.json
@@ -24,7 +24,7 @@
   },
   "testProject": {
     "githubUrl": "https://github.com/mendix/testProjects",
-    "branchName": "datagrid-web"
+    "branchName": "datagrid-web-2.4.4"
   },
   "packagePath": "com.mendix.widget.web",
   "scripts": {
