--- a/packages/pluggableWidgets/tree-node-web/package.json
+++ b/packages/pluggableWidgets/tree-node-web/package.json
@@ -24,7 +24,7 @@
   },
   "testProject": {
     "githubUrl": "https://github.com/mendix/testProjects",
-    "branchName": "tree-node-web"
+    "branchName": "tree-node-web-1.1.0"
   },
   "packagePath": "com.mendix.widget.web",
   "scripts": {
